--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,16 @@
+<ion-split-pane>
 <ion-menu [content]="content">
-  <ion-header>
+  <!-- <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+     <ion-title>Admin</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
 
   <ion-content>
-    <ion-list>
+    <div class="image" padding>
+      <img src="assets/imgs/horizon-logo.png" />
+    </div>
+    <ion-list no-lines>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
@@ -16,4 +20,5 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" main #content swipeBackEnabled="false"></ion-nav>
+</ion-split-pane>
