--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,3 +1,11 @@
 page-list {
-
+    .userimg {
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 1em;
+    }
 }
