--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
 
   <ion-content>
     <div class="image" padding>
-      <img src="assets/imgs/horizon-logo.png" />
+      <img style="max-width:150px" src="assets/imgs/icon.png" />
     </div>
     <ion-list no-lines>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
